# rkl

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release.yml
local-test/: README.md  docker-compose.yml  generate-certs.sh  producer.py
scripts/: install.sh  uninstall.sh
src/: args.rs  consumer.rs  main.rs  merger.rs  models.rs  output.rs
src/query/: ast.rs  mod.rs  parser.rs
src/tui/: app.rs  env_store.rs  mod.rs  query_bounds.rs  runner.rs  ui.rs
