[package]
name = "rkl"
version = "0.1.0"
edition = "2024"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build"] }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
colored = "2.1"
uuid = { version = "1.6", features = ["v4"] }
