[package]
name = "rkl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rdkafka = { version = "0.36", features = ["tokio", "ssl", "sasl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
comfy-table = "7.1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time", "sync"] }
ratatui = "0.27"
crossterm = "0.27"
arboard = "3.4"

[features]
# Default to bundling librdkafka for convenience; disable with --no-default-features
default = ["bundled-librdkafka"]
bundled-librdkafka = ["rdkafka/cmake-build"]
